samples/_failures_safe/1761611482_9bff9e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3e12c5d5.c: In function ‘main’:
./samples/SAFE/__tmp_3e12c5d5.c:159:41: error: expected ‘)’ at end of input
  159 |                     print_matrix(&result
      |                                 ~       ^
      |                                         )
./samples/SAFE/__tmp_3e12c5d5.c:159:21: error: too few arguments to function ‘print_matrix’
  159 |                     print_matrix(&result
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_3e12c5d5.c:55:6: note: declared here
   55 | void print_matrix(const Matrix* mat, const char* name) {
      |      ^~~~~~~~~~~~
./samples/SAFE/__tmp_3e12c5d5.c:159:21: error: expected declaration or statement at end of input
  159 |                     print_matrix(&result
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_3e12c5d5.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3e12c5d5.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3e12c5d5.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3e12c5d5.c:159:21: error: expected declaration or statement at end of input
